# saspeg_djangojs

./: .gitignore  README.md  pyproject.toml
pegdemo/: manage.py  package-lock.json  package.json
pegdemo/pegdemo/: asgi.py  settings.py  urls.py  wsgi.py
pegdemo/static/: index-bundle.js
